# clock32

firmware/: CMakeLists.txt  env.h  filelist.txt  firmware.ino  libraries.txt  ui.c  ui.h  ui_Screen1.c  ui_Screen1.h  ui_events.c  ui_events.h  ui_font_clockface286bpp4numbersv2.c  ui_font_clockface286oPTimized.c  ui_font_quote30oPTimized.c  ui_font_robotomono26mediumbpp4v2.c  ui_font_settings32.c  ui_font_status26oPTimized.c  ui_font_weather96.c  ui_font_weatherdegrees32oPTimized.c  ui_font_weatherdegrees96oPTimized.c  ui_location.c  ui_location.h  ui_main.c  ui_main.h  ui_unitsscreen.c  ui_unitsscreen.h  ui_wifiscreen.c  ui_wifiscreen.h
